<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityController" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/hd_baseball_bg_2" >

            <TextView
                android:id="@+id/histotxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#405580"
                android:gravity="center"
                android:text="@string/histotxt"
                android:textColor="#eaeaea"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/histo_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/histotxt"
                android:transcriptMode="alwaysScroll" >
            </ListView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:background="#cccccc"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#aaaaaa"
                android:orientation="vertical" >

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="0" />

                <TextView
                    android:id="@+id/clickview"
                    android:layout_width="fill_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:background="#666699"
                    android:gravity="center_horizontal"
                    android:text="@string/swingnum"
                    android:textSize="15sp"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/pitchtxt0"
                    android:layout_width="fill_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:background="@drawable/imgbtn_pitch"
                    android:gravity="center"
                    android:onClick="gButtonClick"
                    android:text="@string/bar"
                    android:textSize="20sp" />
            </LinearLayout>

            <TableLayout
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="fill_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:background="@drawable/sbg" >

                    <TextView
                        android:id="@+id/strike_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ddaaea"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/strike" />

                    <TextView
                        android:id="@+id/strike_1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#66ff66"
                        android:gravity="center"
                        android:text="@string/n1"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/strike_2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#99ff99"
                        android:gravity="center"
                        android:text="@string/n2"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/strike_3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ccffcc"
                        android:gravity="center"
                        android:text="@string/n3"
                        android:visibility="invisible" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="fill_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:background="@drawable/bbg" >

                    <TextView
                        android:id="@+id/ball_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#bbeded"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/ball" />

                    <TextView
                        android:id="@+id/ball_1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ff6666"
                        android:gravity="center"
                        android:text="@string/n1"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/ball_2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ff9999"
                        android:gravity="center"
                        android:text="@string/n2"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/ball_3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ffcccc"
                        android:gravity="center"
                        android:text="@string/n3"
                        android:visibility="invisible" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:padding="5dp"
            android:background="#5e5f60" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n1"
                    android:background="@drawable/imgbtn_1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n2"
                    android:background="@drawable/imgbtn_2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n3"
                    android:background="@drawable/imgbtn_3" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n4"
                    android:background="@drawable/imgbtn_4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n5"
                    android:background="@drawable/imgbtn_5" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n6"
                    android:background="@drawable/imgbtn_6" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n7"
                    android:background="@drawable/imgbtn_7" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n8"
                    android:background="@drawable/imgbtn_8" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="gButtonClick"
                    android:textColor="#00000000"
                    android:text="@string/n9"
                    android:background="@drawable/imgbtn_9" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cover"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#99000000"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="" />

        <TextView
            android:id="@+id/cover_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#AAFF9999"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="#00000000"
            android:text=""
            android:onClick="noClick" />
    </LinearLayout>

</RelativeLayout>